name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , beam-core
               , beam-postgres
               , common
               , frontend
               , gargoyle
               , gargoyle-postgresql-nix
               , postgresql-simple
               , obelisk-backend
               , obelisk-route
  exposed-modules:
    Backend
    Backend.Store
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , beam-core
               , beam-postgres
               , backend
               , common
               , frontend
               , gargoyle
               , gargoyle-postgresql-nix
               , postgresql-simple
               , obelisk-backend
