name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , beam-core
               , obelisk-route
               , mtl
               , text
               , time
  default-extensions:
    TypeFamilies
    PolyKinds
  exposed-modules:
    Common.Api
    Common.Route
    Common.Types
